--- a/conv.ipynb
+++ b/conv.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 83,
       "metadata": {
         "id": "Pg8siF53hM1O"
       },
@@ -16,7 +16,8 @@
         "import pandas as pd\n",
         "import fastcore.all as fc\n",
         "import gc\n",
-        "import random"
+        "import random\n",
+        "from itertools import islice"
       ]
     },
     {
@@ -30,7 +31,7 @@
       "metadata": {
         "id": "WHA8BNBoh37s"
       },
-      "execution_count": 2,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -42,7 +43,7 @@
       "metadata": {
         "id": "X-EyRHa8iHe2"
       },
-      "execution_count": 3,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -51,7 +52,7 @@
         "class Dataset:\n",
         "  def __init__(self,x,y): fc.store_attr()\n",
         "\n",
-        "  def __len__(self): return self(len(x))\n",
+        "  def __len__(self): return len(self.x)\n",
         "\n",
         "  def __getitem__(self,i): return self.x[i], self.y[i]\n",
         "\n",
@@ -62,7 +63,7 @@
       "metadata": {
         "id": "O_vNqZjQmBd_"
       },
-      "execution_count": 4,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -70,32 +71,59 @@
       "source": [
         "\n",
         "# escolhe a ordem dos elementos a serem pegos do dataloadder\n",
+        "\n",
         "class BatchSampler:\n",
         "  def __init__(self,ds,bs,shuffle=False):\n",
         "      fc.store_attr()\n",
-        "      self.sample = list(range(len(ds)))\n",
-        "      if shuffle: self.sample.aplly(random.shuffle)\n",
+        "      self.n = len(ds)\n",
+        "\n",
+        "      self.sample = list(range(self.n))\n",
+        "      if shuffle: random.shuffle(self.sample)\n",
         "  def __iter__(self):\n",
-        "      for i in range(0,len(self.ds),self.bs): yield\n",
+        "      for i in range(0,self.n,self.bs):\n",
+        "        indices = list(islice(self.sample,i,min(i+self.bs,self.n)))\n",
+        "        yield self.ds[tensor(indices)]\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "inI-RKmeumqR",
-        "outputId": "ff484c35-d9fa-4fee-ff2d-0b15c3143ba3",
+        "id": "inI-RKmeumqR"
+      },
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bs = BatchSampler(dst,8,shuffle=True)\n",
+        "next(iter(bs))"
+      ],
+      "metadata": {
+        "id": "EB_MM3gWA4zZ",
+        "outputId": "a8db6abc-94c9-409f-c16d-6ec109fa06f8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 111,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "incomplete input (<ipython-input-7-cfd82ba49785>, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-cfd82ba49785>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    class sampler:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0, 0, 0,  ..., 0, 0, 0],\n",
+              "         [0, 0, 0,  ..., 0, 0, 0],\n",
+              "         [0, 0, 0,  ..., 0, 0, 0],\n",
+              "         ...,\n",
+              "         [0, 0, 0,  ..., 0, 0, 0],\n",
+              "         [0, 0, 0,  ..., 0, 0, 0],\n",
+              "         [0, 0, 0,  ..., 0, 0, 0]]),\n",
+              " tensor([3, 4, 9, 1, 6, 3, 7, 4]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
         }
       ]
     },
@@ -106,8 +134,7 @@
         "\n",
         "class Dataloader:\n",
         "  def __init__(self,ds,bs=64,n_workers=2,transform=fc.noop,): fc.store_attr()\n",
-        "  def __iter__(self):\n",
-        ""
+        "  def __iter__(self): pass\n"
       ],
       "metadata": {
         "id": "doPKt_RSkHn1",
@@ -117,7 +144,7 @@
           "height": 106
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
